# python-c-api-example

./: example.c  example.stdout
c_python_function_call/: example.c  example.stdout  lib.py
empty_struct/: empty_global_state.rs  non_empty_global_state.rs
rust_python_function_call/: Cargo.toml  lib.py  program.stdout
rust_python_function_call/src/: auxbinds.c  main.rs
rust_python_specced/: Cargo.toml  Prusti.toml  build.rs
rust_python_specced/src/: auxbinds.c  interface.rs  main.rs
types_prototype/: Cargo.toml  Prusti.toml
types_prototype/src/: interface.rs  main.rs
viper_spec/: try_validity_and_refcount_spec.vpr
