[package]
name = "rust_python_specced"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prusti-contracts = { path = "../../../live/prusti-dev/prusti-contracts/prusti-contracts" }
libc = "0.2"

[build-dependencies]
cc = "1.0"

[workspace]
